Added current date to page
Because I wanted to

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
-    <body>
+    <head>
+        <script src="scripts/main.js"></script>
+    </head>
+    <body onload="main()">
         <h1>Hello World</h1>
+        <p id="today"></p>
     </body>
 </html>
