Added clicker counter

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <body onload="main()">
         <h1>Hello World</h1>
         <p id="today"></p>
-        <img src="images/scrawl.png" />
+        <img src="images/scrawl.png" /></br>
+        <button id="clicker" onclick="clickButton()">0</button>
     </body>
 </html>
