Testing view port setting

--- a/pokecalc/index.html
+++ b/pokecalc/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>PokeCalc</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="pokecalc.css"/>
         <script src="pokecalc.js"></script>
     </head>
