Switched links over to HTTPS

--- a/NeuralWorkshop/index.html
+++ b/NeuralWorkshop/index.html
@@ -2,8 +2,8 @@
     <head>
         <title>Neural Workshop</title>
         <link rel="stylesheet" href="css/neural.css"/>
-        <script src="http://elpollouk.github.io/libs/ChickenFW.js"></script>
-        <script src="http://elpollouk.github.io/libs/ChickenVis.js"></script>
+        <script src="https://elpollouk.github.io/libs/ChickenFW.js"></script>
+        <script src="https://elpollouk.github.io/libs/ChickenVis.js"></script>
 
         <script src="js/core.js"></script>
         <script src="js/polarsignal.js"></script>
