Published latest neural workshop

--- a/NeuralWorkshop/index.html
+++ b/NeuralWorkshop/index.html
@@ -21,6 +21,7 @@
         <div id="viewer"></div>
         <div>
             <button onclick="updateToggle()">Pause</button>
+            <button onclick="toggleAutoWarp()">Auto Warp</button>
             Warp <input id="warp" type="range" min="1" max="10" value="1"/>
         </div>
     </body>
