--- a/NeuralWorkshop/index.html
+++ b/NeuralWorkshop/index.html
@@ -14,6 +14,7 @@
         <script src="js/neuron.js"></script>
         <script src="js/neuralnet.js"></script>
         <script src="js/entitybuilder.js"></script>
+        <script src="js/graph.js"></script>
 
         <script src="js/bootstrap.js"></script>
     </head>
