--- a/NeuralWorkshop/index.html
+++ b/NeuralWorkshop/index.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <div id="viewer"></div>
-        <div>
+        <div id="controls">
             <button onclick="updateToggle()">Pause</button>
             <button onclick="toggleAutoWarp()">Auto Warp</button>
             Warp <input id="warp" type="range" min="1" max="10" value="1"/>
