Latest version of Neural Workshop

--- a/NeuralWorkshop/index.html
+++ b/NeuralWorkshop/index.html
@@ -9,8 +9,10 @@
         <script src="js/polarsignal.js"></script>
         <script src="js/keyboardsignal.js"></script>
         <script src="js/targetsignal.js"></script>
+        <script src="js/clustersignal.js"></script>
         <script src="js/wrappedsignal.js"></script>
         <script src="js/entity.js"></script>
+        <script src="js/attachments.js"></script>
         <script src="js/neuron.js"></script>
         <script src="js/neuralnet.js"></script>
         <script src="js/entitybuilder.js"></script>
