Forgot the I had already set up some pages for ChickenBF

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h2>Brainfuck Interpreters</h2>
             <p>I've always enjoyed the challenge of writing optimised interpreters in different languages. It's also a good exercise when moving to a new environment in order to become familiar with it. Here are a couple I've written in the past:</p>
             <ul>
-                <li><a href="https://github.com/elpollouk/ChickenBF">JavaScript</a> - A test so see how fast I could make it in a browser. Try it in your browser <a href="ChickenBF/index.html">here</a> with this <a href="https://raw.githubusercontent.com/elpollouk/BVM/master/samples/mandelbrot.bf">sample</a>.</li>
+                <li><a href="https://github.com/elpollouk/ChickenBF">JavaScript</a> - A test so see how fast I could make it in a browser. Try it in your browser <a href="bf/index.html">here</a> with this <a href="https://raw.githubusercontent.com/elpollouk/BVM/master/samples/mandelbrot.bf">sample</a>.</li>
                 <li><a href="https://github.com/elpollouk/BVM">C++</a> - Written on my Raspbery PI and includes a bf to asm compiler. Eventually I'll add jitting.</li>
             </ul>
         </div>
