--- a/littlemen/index.html
+++ b/littlemen/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="src/sprite.css" />
 
 		<link rel="stylesheet" type="text/css" href="data/littleman/sprite.css" />
+		<link rel="stylesheet" type="text/css" href="data/elephant/sprite.css" />
 
 		<script type="text/javascript" src="main.js"></script>
 		<script type="text/javascript" src="src/sprite.js"></script>
