--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             <p>You can see a version of it running <a href="NeuralWorkshop/index.html">here</a>.</p>
         </div>
         <div class="project">
+            <h2><a href="astar">A* Visualisation</a></h2>
+            <p>A visualisation of using A* for path finding.</p>
+        </div>        
+        <div class="project">
             <h2><a href="littlemen/index.html">Little Men</a></h2>
             <p>A prototype of using just CSS to create an interavite experience rather than a canvas. I never took it any further as collision detection is much harder to do with CSS animated objects and sufferes from timers going out of sync.</p>
         </div>
