--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             <p>You can see a version of it running <a href="NeuralWorkshop/index.html">here</a>.</p>
         </div>
         <div class="project">
+            <h2><a href="TwinStick">Twin Stick Shooter</a></h2>
+            <p>This is just a very simple game to that a neural network AI should be able to play.</p>
+        </div>   
+        <div class="project">
             <h2><a href="astar">A* Visualisation</a></h2>
             <p>A visualisation of using A* for path finding.</p>
         </div>        
