--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="project">
             <h2><a href="TwinStick">Twin Stick Shooter</a></h2>
-            <p>This is just a very simple game to that a neural network AI should be able to play.</p>
+            <p>This is just a very simple game to that a neural network AI should be able to play. You will need a game pad to play this game.</p>
         </div>   
         <div class="project">
             <h2><a href="astar">A* Visualisation</a></h2>
