--- a/TwinStick/index.html
+++ b/TwinStick/index.html
@@ -3,14 +3,16 @@
         <title>GamePad</title>
         <script src="https://elpollouk.github.io/libs/ChickenFW.js"></script>
         <script src="https://elpollouk.github.io/libs/ChickenVis.js"></script>
-        <script src="config.js"></script>
-        <script src="game.js"></script>
-        <script src="player.js"></script>
-        <script src="bullet.js"></script>
-        <script src="enemy.js"></script>
-        <script src="gamepad.js"></script>
-        <script src="fieldVisualiser.js"></script>
-        <script src="main.js"></script>
+        <script src="src/config.js"></script>
+        <script src="src/game.js"></script>
+        <script src="src/player.js"></script>
+        <script src="src/bullet.js"></script>
+        <script src="src/enemy.js"></script>
+        <script src="src/gamepad.js"></script>
+        <script src="src/soundplayer.js"></script>
+        <script src="src/fieldVisualiser.js"></script>
+        <script src="src/main.js"></script>
     </head>
-    <body></body>
+    <body>
+    </body>
 </html>
