Updated to latest version fo TwinStick

--- a/TwinStick/index.html
+++ b/TwinStick/index.html
@@ -4,13 +4,17 @@
         <script src="https://elpollouk.github.io/libs/ChickenFW.js"></script>
         <script src="https://elpollouk.github.io/libs/ChickenVis.js"></script>
         <script src="src/config.js"></script>
-        <script src="src/game.js"></script>
-        <script src="src/player.js"></script>
-        <script src="src/bullet.js"></script>
-        <script src="src/enemy.js"></script>
-        <script src="src/gamepad.js"></script>
-        <script src="src/soundplayer.js"></script>
-        <script src="src/fieldVisualiser.js"></script>
+        <script src="src/game/game.js"></script>
+        <script src="src/game/player.js"></script>
+        <script src="src/game/bullet.js"></script>
+        <script src="src/game/enemy.js"></script>
+        <script src="src/game/modes/pregame.js"></script>
+        <script src="src/game/modes/play.js"></script>
+        <script src="src/input/gamepad.js"></script>
+        <script src="src/game/soundplayer.js"></script>
+        <script src="src/ai/fieldVisualiser.js"></script>
+        <script src="src/ai/volume.js"></script>
+        <script src="src/utils/configParser.js"></script>
         <script src="src/main.js"></script>
     </head>
     <body>
