--- a/TwinStick/index.html
+++ b/TwinStick/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <title>GamePad</title>
+        <title>TwinStick</title>
+        <link href="css/index.css" rel="stylesheet" type="text/css"/>
         <script src="https://elpollouk.github.io/libs/ChickenFW.js"></script>
         <script src="https://elpollouk.github.io/libs/ChickenVis.js"></script>
         <script src="src/config.js"></script>
