--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         </div>
 
         <div class="project">
+            <h2><a href="https://github.com/elpollouk/Itokawa">Itokawa DCC Train Control</a></h2>
+            <p>A DCC server for model railways that allows for layout control via a web browser.</p>
+            <p>You can try a demo version of it <a href="Itokawa/index.html?demo">here</a>.</p>
+        </div>
+        <div class="project">
             <h2><a href="https://github.com/elpollouk/ChickenTest">Chicken Test</a></h2>
             <p>A testing framework I cobbled together to try a few different JavaScript techniques. I now use it for all my personal JavaScript projects.</p>
         </div>
