Updated link to Itokawa demo.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="project">
             <h2><a href="https://github.com/elpollouk/Itokawa">Itokawa DCC Train Control</a></h2>
             <p>A DCC server for model railways that allows for layout control via a web browser.</p>
-            <p>You can try a demo version of it <a href="Itokawa/index.html?demo">here</a>.</p>
+            <p>You can try a demo version of it <a href="Itokawa/?demo">here</a>.</p>
         </div>
         <div class="project">
             <h2><a href="https://github.com/elpollouk/ChickenTest">Chicken Test</a></h2>
