Added simple particle simulation

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <p>You can try a demo version of it <a href="Itokawa/?demo">here</a>.</p>
         </div>
         <div class="project">
+            <h2><a href="particles/index.html">Particle Simulation</a></h2>
+            <p>A simple particle system to act as a screen saves for an unused screen.</p>
+        </div>
+        <div class="project">
             <h2><a href="https://github.com/elpollouk/ChickenTest">Chicken Test</a></h2>
             <p>A testing framework I cobbled together to try a few different JavaScript techniques. I now use it for all my personal JavaScript projects.</p>
         </div>
