Particles: Added a simple score counter

--- a/particles/index.html
+++ b/particles/index.html
@@ -6,11 +6,13 @@
     </head>
     <body>
         <canvas id="view"></canvas>
+        <span id="yeets">0</span>
         <div id="controls">
             <div id="goFullscreen" class="button autohide">Full Screen</div>
             <div id="exitFullscreen" class="button autohide">Exit Full Screen</div>
             <div id="reset" class="button">Reset</div>
             <div id="toggleWells" class="button">Toggle Wells</div>
+            <div id="showScore" class="button">Yeets?</div>
         </div>
     </body>
 </html>
